--- a/templates/registration/form.html.twig
+++ b/templates/registration/form.html.twig
@@ -1,5 +1,5 @@
 {% extends  'base.html.twig'%}
-
+<h1> Petko is Master</h1>
 {% block title %} Check our {{ title }}{% endblock %}
 {% block body %}
 {#comment#}
