--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,16 +2,45 @@
 
 {% block title %}Register{% endblock %}
 
+{% block stylesheets %}<link rel="stylesheet" href="css/coming-soon.css">{% endblock %}
+
 {% block body %}
-    <h1>Register</h1>
+    <div class="overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="mp4/bg.mp4" type="video/mp4">
+    </video>
+<div class="container my-container">
+    <div class="row">
+        <div class="col-md-5 mx-auto">
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-    {{ form_row(registrationForm.Name) }}
-    {{ form_row(registrationForm.Phone) }}
-    {{ form_row(registrationForm.agreeTerms) }}
+            <div class="myform form col-md-5 mx-auto">
+                {% if app.user %}
+                    <div class="mb-3">
+                        <div class="alert alert-info">   You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a> </div>
 
-        <button class="btn">Register</button>
-    {{ form_end(registrationForm) }}
-{% endblock %}
+                    </div>
+                {% endif %}
+                <div class="logo mb-3">
+                    <div class="col-md-12 text-center">
+                        <h1>Sign Up</h1>
+                    </div>
+
+                {{ form_start(registrationForm) }}
+                {{ form_row(registrationForm.email) }}
+                {{ form_row(registrationForm.plainPassword) }}
+                {{ form_row(registrationForm.Name) }}
+                {{ form_row(registrationForm.Phone) }}
+                {{ form_row(registrationForm.agreeTerms, {label_attr: {class: 'switch-custom'} }) }}
+
+                <button class="btn btn-block mybtn btn-success tx-tfm">Register</button>
+                    <div class="form-group my-form-group">
+                        <p class="text-center"><a href="{{ path('app_index') }}">Return Home</a></p>
+                    </div>
+                {{ form_end(registrationForm) }}
+
+               </div>
+            </div>
+        </div>
+    </div>
+</div>
+    {% endblock %}
