--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,24 +2,46 @@
 
 {% block title %}Log in!{% endblock %}
 
+{% block stylesheets %}<link rel="stylesheet" href="css/coming-soon.css">{% endblock %}
+
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="mp4/bg.mp4" type="video/mp4">
+    </video>
+<div class="container my-container">
+    <div class="row">
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+        <div class="col-md-5 mx-auto">
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
 
+            <div id="first">
+                <div class="myform form ">
+                    {% if error %}
+                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    {% endif %}
+
+                    {% if app.user %}
+                    <div class="mb-3">
+                        <div class="alert alert-info">   You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a> </div>
+                        {% endif %}
+                    <div class="logo mb-3">
+                        <div class="col-md-12 text-center">
+                            <h1>Please sign in</h1>
+                        </div>
+                    </div>
+
+
+
+                    <form method="post">
+                        <div class="form-group">
+                            <label for="inputEmail">Email</label>
+                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" aria-describedby="emailHelp"  placeholder="Enter email" required autofocus>
+                        </div>
+                        <div class="form-group">
+                              <label for="inputPassword">Password</label>
+                             <input type="password" name="password" id="inputPassword" class="form-control" aria-describedby="emailHelp" placeholder="Enter Password" required>
+                        </div>
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
@@ -35,8 +57,20 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="btn btn-block mybtn btn-primary tx-tfm" type="submit">
         Sign in
     </button>
+                        <div class="form-group my-form-group">
+                            <p class="text-center">Don't have account? <a href="{{ path('app_register') }}" id="signup">Sign up here</a></p>
+                        </div>
+                        <div class="form-group">
+                            <p class="text-center">or return <a href="{{ path('app_index') }}">Home</a></p>
+                        </div>
 </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 {% endblock %}
